<resources>
    <string name="app_name">Sticks</string>
    <string name="facebook_app_id">1463581123709447</string>
    <string name="fb_login_protocol_scheme">fb1463581123709447</string>
    <string name="add_post">Add Post</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="players">Players</string>
    <string name="chat">Chat</string>
    <string name="posts">Posts</string>
    <string name="comment">Comment...</string>

    <string name="gamer_tag">Gamer Tag: </string>
    <string name="psn_id">PSN ID: </string>
    <string name="console">Console: </string>
    <string name="name">Name: </string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>

</resources>
