<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:layout_height="wrap_content"
        android:id="@+id/profile_icon"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_person_outline_black_24dp"
        android:layout_marginTop="48dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        />
    <EditText
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/name"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gamer_tag"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/gamer_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/gamer_tag"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:textAlignment="center" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/psn_id"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/psn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/psn_id"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/console"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/preferred_console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/console"
        android:layout_marginBottom="8dp" />
</LinearLayout>